<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorPrimaryDark"
        tools:context=".OnboardingActivity">


    <TextView
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/tellAboutYourself"
            android:textColor="@color/questionNumberTextColor"
            android:layout_margin="5dp"
            android:background="@color/textBackgroundColor"
            android:textSize="25dp"
            android:gravity="center"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/nameEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:errorEnabled="true">

        <EditText
                android:id="@+id/nameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/companyEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:errorEnabled="true">

        <EditText
                android:id="@+id/companyEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/company" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/positionEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:errorEnabled="true">

        <EditText
                android:id="@+id/positionEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/position" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/emailEditLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:errorEnabled="true">

        <EditText
                android:id="@+id/emailEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />

    </android.support.design.widget.TextInputLayout>

    <CheckBox
            android:id="@+id/wantToReceiveCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/wantReceiveDemoMaterials" />

    <CheckBox
            android:id="@+id/acceptCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:text="@string/acceptPolitics" />

    <Button
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_margin="5dp"
            android:text="@string/acceptAndStart"
            android:id="@+id/acceptButton"
            android:background="@color/buttonColor"/>

</LinearLayout>